# churn_prediction

./: README.md  churn prediction demo.ipynb  customer_data.json  customer_data_sweetviz.html  pyproject.toml
